--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.2",
     "@mui/system": "^7.3.2",
     "@reduxjs/toolkit": "^2.2.3",
     "react": "^18.2.0",
